# Seevar-Lite

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: comparisons.json  objects.json  site.json  targets.json  weather.json
src/seevar_lite/: __init__.py  aavso.py  catalog.py  cli.py  fits_io.py  observe_dryrun.py  observe_dryrun_cli.py  photometry.py  pipeline.py  preflight.py  preflight_cli.py  seestar_alp.py  seestar_alp_cli.py  stack.py  state.py
tests/: test_observe_dryrun.py  test_postflight_pipeline.py  test_preflight_pipeline.py  test_seestar_alp_export.py
